--- a/src/app/material-requirements-planning/material-requirements-planning.component.scss
+++ b/src/app/material-requirements-planning/material-requirements-planning.component.scss
@@ -1,3 +1,15 @@
+.app-content-flex-box {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+}
+
+.scrollable-table {
+  flex-grow: 1;
+  overflow: auto;
+}
+
 th.mat-header-cell {
   text-align: center;
 }
